ChangePassword endpoint added
