# src/controllers/customers.controller.js
@@ -6,7 +6,7 @@ const getAllCustomers = async (req, res) => {
     
     try {
         const customers = await Customer.findAll();
-        res.json(customers)    
+        res.status(200).json(customers);    
     } catch (error) {
         return res.status(500).json({message: error.message})
     }
@@ -17,10 +17,14 @@ const getOneCustomer = async (req, res) => {
     // Users with any role are able to view customers. They only need to be logged in.
     const { id } = req.params;
     try {
-        const customer = await Customer.findByPk(id)
-        res.json(customer)
+        const customer = await Customer.findByPk(id);
+        if (customer) {
+            return res.status(200).json(customer);
+        } else {
+            return res.status(404).json({message: `Does not exist a customer with the id ${id}`});
+        }
     } catch (error) {
-        return res.status(500).json({message: error.message})
+        return res.status(500).json({message: error.message});
     }
 }
 
@@ -29,7 +33,7 @@ const createCustomer =  async (req, res) => {
     const { sub, role } = req.userInfo;
 
     // Users with the guest role should not be able to create customers
-    if (role !== 'admin' && role !== 'seller') return res.status(400).json({message: 'You do not have authorization for this action.'});
+    if (role !== 'admin' && role !== 'seller') return res.status(403).json({message: 'You do not have authorization for this action.'});
     
     try {
         const { id, email, firstName, lastName } = req.body;
@@ -41,7 +45,7 @@ const createCustomer =  async (req, res) => {
             lastName,
             salespersonId:sub
         });
-        res.json({newCustomer})
+        if (newCustomer) return res.status(200).json({newCustomer})
     
     } catch (error) {
         return res.status(500).json({message: error.message})
@@ -60,7 +64,7 @@ const updateCustomer = async (req, res) => {
         if (role === 'admin' || customer.salespersonId === sub) {
             customer.set(req.body);
             await customer.save();
-            res.json(customer);
+            res.status(200).json(customer);
         } else {
             return res.status(403).json({message: 'You should be an admin or the resource owner to do this action.'})
         }
@@ -78,13 +82,16 @@ const deleteCustomer = async (req, res) => {
     const { sub, role } = req.userInfo;    
     
     try {
-        const customer = await Customer.findByPk(id);
-        if (!customer) return res.status(404).json({message: `The customer with id ${id} does not exist.`});
+        //const customer = await Customer.findByPk(id);
+        //if (!customer) return res.status(404).json({message: `The customer with id ${id} does not exist.`});
         
         // Only 'admin' or the owner are able to remove a customer.
-        if (role === 'admin' || customer.salespersonId === sub) {
-            await Customer.destroy({ where: { id } });
-            return res.status(200).json({message: `The customer with id ${id} was successfully removed.`});
+        if (role === 'admin') {
+            const result = await Customer.destroy({ where: { id } });
+            if (result === 1) return res.status(200).json({message: `The customer with id ${id} was successfully removed.`});
+            if (result === 0) return res.status(404).json({message: `The customer with id ${id} does not exist.`});
+        } else {
+            return res.status(403).json({message: 'You should have the admin role to complete this action.'});            
         }
         
     } catch (error) {
