# src/controllers/orders.controller.js
@@ -7,7 +7,7 @@ const getAllOrders = async (req, res) => {
     
     try {
         const orders = await Order.findAll({include : Item});
-        res.json(orders)    
+        res.status(200).json(orders)    
     } catch (error) {
         return res.status(500).json({message: error.message})
     }
@@ -19,7 +19,11 @@ const getOneOrder = async (req, res) => {
     const { id } = req.params;
     try {
         const order = await Order.findByPk(id, {include: Item});
-        res.json(order);
+        if (order) {
+            res.status(200).json(order);
+        } else {
+            res.status(404).json({message: `The order with id ${id} does not exist.`});
+        }
     } catch (error) {
         return res.status(500).json({message: error.message});
     }
@@ -28,28 +32,37 @@ const getOneOrder = async (req, res) => {
 // CREATE ONE ORDER
 const createOrder =  async (req, res) => {
 
-    const { id, date, customerId, items } = req.body;
+    const { date, customerId, items } = req.body;
     const { sub, role } = req.userInfo;
-    if (role !== 'admin' && role !== 'seller') return res.send('You cannot create orders');
     
-    const itemsWithId = items.map( item => {
-        return { id, ...item}
-    });
-
+    // Only users with role 'admin' or 'seller are able to create orders
+    if (role !== 'admin' && role !== 'seller') return res.status(403).json({message: 'You cannot create orders'});
+    
+    const t = await sequelize.transaction();
     try {
         
         const newOrder = await Order.create({
-            id,
             date,
             customerId,
             salespersonId: sub,
-            items: itemsWithId
-        }, {include : Item});
+        }, {transaction: t});
         
-        res.json({newOrder})
+        for (let i = 0; i < items.length; i++ ) {
+            await Item.create({
+                orderId: newOrder.id,
+                productId: items[i].productId,
+                quantity: items[i].quantity,
+                unitPrice: items[i].unitPrice
+            }, {transaction: t});
+        }
+
+        await t.commit();
+        const order = await Order.findByPk(newOrder.id, {include: Item});
+        res.status(200).json(order);
     
     } catch (error) {
-        return res.status(500).json({message: error.message})
+        await t.rollback();
+        return res.status(500).json({message: error.message});
     }
 }
 
@@ -59,7 +72,7 @@ const updateOrder = async (req, res) => {
     const { id } = req.params;
     const { sub, role } = req.userInfo;
 
-    const { date, customerId, salespersonId, items } = req.body;
+    const { date, customerId, items } = req.body;
     const itemsWithId = items.map( item => {
         return { orderId:id, ...item }
     });
@@ -70,7 +83,7 @@ const updateOrder = async (req, res) => {
         const order = await Order.findByPk(id);
         if (order.salespersonId === sub || role === 'admin') {
             await Order.update(
-                { date, customerId, salespersonId },
+                { date, customerId },
                 { where: { id }, transaction: t }
             );
     
@@ -81,10 +94,10 @@ const updateOrder = async (req, res) => {
             }
             
             await t.commit();
-            res.json(await Order.findByPk(id, {include: Item}));
+            res.status(200).json(await Order.findByPk(id, {include: Item}));
             
         } else {
-            return res.send('No puedes hacer esto')
+            return res.status(403).json({message: 'You do not have the proper role to complete this action.'});
         }
         
     } catch (error) {
@@ -107,7 +120,7 @@ const deleteOrder = async (req, res) => {
     if (!order) return res.status(404).json({message: `The order ${id} does not exist.`});
     
     // Only the owner of the order or a user with the 'admin' role can remove an order.
-    if (order.salespersonId !== sub && role !== 'admin') return res.status(401).json({message: 'You are not authorized to perform this action.'});
+    if (order.salespersonId !== sub && role !== 'admin') return res.status(403).json({message: 'You are not authorized to perform this action.'});
 
     const t = await sequelize.transaction();
     try {
